<resources>
    <string name="app_name">CSDNDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start">StartActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">BaseActivity</string>
    
    <string name="login_csdnlogin_btn">CSDN账号登陆</string>
    <string name="login_weixinlogin_btn">微信登陆</string>
    <string name="login_weibologin_btn">微博登陆</string>
    
    <string name="text_cancel">取消</string>
    <string name="text_login">登陆</string>
    <string name="text_forget_psd">忘记密码</string>
    
    <string name="hint_input_user_name">请输入用户名</string>
    <string name="hint_input_user_psd">请输入密码</string>
    <string name="text_read">阅读</string>
    <string name="text_ask">问答</string>
    <string name="text_bbs">论坛</string>
    <string name="text_my">我的</string>
    <string name="text_setting">设置</string>
</resources>
