<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/login_relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splashscreen" >

        <RelativeLayout
            android:id="@+id/login_btngroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="20dp" >

            <Button
                android:id="@+id/login_btn_csdn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_btn_shape"
                android:text="@string/login_csdnlogin_btn"
                android:textColor="@color/login_stroke_gray"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_btn_csdn"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/gray_btn_shape"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/login_btn_weixin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:drawableLeft="@drawable/weixin2"
                        android:text="@string/login_weixinlogin_btn"
                        android:textColor="@color/login_stroke_gray"
                        android:textSize="16sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/gray_btn_shape"
                    android:gravity="center" >

                    <Button
                        android:id="@+id/login_btn_weibo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@null"
                        android:drawableLeft="@drawable/weibo2"
                        android:text="@string/login_weibologin_btn"
                        android:textColor="@color/login_stroke_gray"
                        android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <include layout="@layout/activity_login_detail" />

</FrameLayout>